--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "scripts": {
     "dev": "cross-env NODE_ENV=dev nodemon --delay 2 --exec babel-node src/index.js",
-    "start": "babel-node src/index.js",
+    "start": "babel-node src/index.js --presets babel-preset-env",
     "build": "babel src -d build"
   },
   "devDependencies": {
