--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=dev nodemon --delay 2 --exec babel-node src/index.js",
     "start": "babel-node src/index.js --presets babel-preset-env",
-    "build": "babel src -d build"
+    "build": "babel src -d build",
+    "fix": "eslint . --fix"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
