--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sharp": "^0.21.3",
-    "slug": "^0.9.3"
+    "slug": "^0.9.3",
+    "swagger-ui-express": "^4.0.5"
   }
 }
