--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "cross-env NODE_ENV=dev nodemon --delay 2 --exec babel-node src/index.js",
     "start": "babel-node src/index.js --presets babel-preset-env",
     "build": "babel src -d build",
+    "log": "heroku logs --tail",
     "fix": "eslint . --fix"
   },
   "devDependencies": {
